<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lista_animales_main_Fragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/listaAnimales_string" />
        <item
            android:id="@+id/nav_mis_animales"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/misAnimales_string" />
        <item
            android:id="@+id/nav_articulos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/articulos_string" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/nav_login"
            android:title="@string/login_string" />
    </group>
</menu>